--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
-@import  'ngx-toastr/toastr' ;
-
+@import "ngx-toastr/toastr";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* Evita el scroll horizontal global */
-html, body {
+html,
+body {
   overflow-x: hidden;
   width: 100%;
+   font-family: "Poppins", sans-serif;
 }
 
 /* Asegura que todos los contenedores no se desborden */
@@ -12,7 +14,9 @@ html, body {
 }
 
 /* Opcionalmente, corrige imágenes o elementos que se estiren */
-img, video, iframe {
+img,
+video,
+iframe {
   max-width: 100%;
   height: auto;
   display: block;
