--- a/src/app/public/contact/contact.component.html
+++ b/src/app/public/contact/contact.component.html
@@ -34,9 +34,9 @@
             Consultas, pedidos especiales<br>
             o cualquier información que necesites
           </p>
-          <a href="mailto:berna_zepeda@hotmail.com" class="contact-btn">
+          <a href="mailto:angel.blak666@hotmail.com" class="contact-btn">
             <i class="fas fa-paper-plane"></i>
-            berna_zepeda@hotmail.com
+            angel.blak666@hotmail.com
           </a>
         </div>
       </div>
@@ -55,7 +55,7 @@
           </p>
           <a href="tel:+527531234567" class="contact-btn">
             <i class="fas fa-phone"></i>
-            +52 753 123 4567
+            +52 753 109 3826
           </a>
         </div>
       </div>
@@ -107,7 +107,7 @@
                   <input
                     type="tel"
                     class="form-control-custom"
-                    placeholder="+52 753 123 4567">
+                    placeholder="+52 753 109 3826">
                 </div>
               </div>
 
@@ -171,7 +171,7 @@
           </div>
           <iframe
             class="map-iframe"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1341.7713169801837!2d-102.23294703427386!3d17.973972805862935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315d06146cdce3%3A0x995c19fc6bf7f16a!2sINFINITY%20GYM!5e0!3m2!1ses-419!2smx!4v1715230564822!5m2!1ses-419!2smx"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3358.7522118533197!2d-102.21920080359097!3d17.98784879046938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315d498fd75ca7%3A0x50fa4874509ab16f!2sCarnicer%C3%ADa%20Franko!5e1!3m2!1ses-419!2smx!4v1762351916136!5m2!1ses-419!2smx"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
