--- a/src/app/public/footer/footer.component.html
+++ b/src/app/public/footer/footer.component.html
@@ -62,11 +62,11 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <span>berna_zepeda@hotmail.com</span>
+              <span>angel.blak666@hotmail.com</span>
             </div>
             <div class="contact-item">
               <i class="fas fa-phone"></i>
-              <span>+52 753 123 4567</span>
+              <span>+52 753 109 3826</span>
             </div>
           </div>
         </div>
